maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:33: error: expected class or object definition
def go() = {
^Escaper:41: error: Unmatched closing brace '}' ignored here
}
^